--- a/index.html
+++ b/index.html
@@ -5,8 +5,153 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer-gear</title>
+    <script src="https://kit.fontawesome.com/6deda47201.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+     <header></header>    
+     <!-- header end                                    -->
+
+     <main>
+         <section id="banner">
+             <div class="banner">
+                 <div class="banner-info">
+                    <h1>
+                        Start your Journey as 
+Influencer
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptatibus explicabo possimus architecto vero fuga facere unde temporibus debitis error!</p>
+                    <button id="radias-button">Preebook now <span><i class="fas fa-arrow-right"></i></span></button>
+                 </div>
+                 <div class="banner-img">
+                        <div class="img">
+                            <img src="images/main-camera.png" alt="this is camera">
+                        </div>
+                 </div>
+             </div>
+         </section>
+         <section id="all-blogs">
+             <h2>Popular Collection</h2>
+             <div class="blogs">
+                 <div class="blog">
+                     <img src="images/blog-1.png" alt="">
+                     <h4>Flex Tripod</h4>
+                     <h3>$50.48</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.99
+                        </p>
+                     <p>A flexible tripod is a great solution for travelers who want... to take hard to attain, creative, high-quality photos, as these mounts can be attached or placed to surfaces or bars for a more creative photography session.</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-2.png" alt="">
+                     <h4>Microphone</h4>
+                     <h3>$120.25</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.98
+                        </p>
+                     <p>Microphones capture sound waves in the air and turn them into identical electrical signals. ... Each of the three primary types of microphones—dynamic microphones, condenser microphones, and ribbon microphones</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-3.png" alt="">
+                     <h4>Airbuds</h4>
+                     <h3>$50.48</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.99
+                        </p>
+                     <p>The Airbuds 2 have a very good quality audio sound. They feature two microphones with noise filters. They are perfect for practically anything. Some Airbuds 2 Reviews we have come across think.</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-4.png" alt="">
+                     <h4>Drone</h4>
+                     <h3>$980.25</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.98
+                        </p>
+                     <p>You can fly your drone or UAV in most parks and public spaces around Auckland without a permit. Before you fly your drone in public spaces, check the map showing controlled airspace on the Airshare website</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-5.png" alt="">
+                     <h4>Light Setup</h4>
+                     <h3>$1200</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.98
+                        </p>
+                     <p>Three point lighting is the most basic lighting setup in the film industry. Using a key light, fill light, and a back light, we're able to give shape to our subject and separate them from the background.</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-6.png" alt="">
+                     <h4>Photoshoot set</h4>
+                     <h3>$820.40</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span> 5.00
+                        </p>
+                     <p>Portrait photography, or portraiture, is a type of photography aimed toward capturing the personality of a person or group of people by using effective lighting, backdrops, and poses. A portrait photograph may be artistic or clinical</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-7.png" alt="">
+                     <h4>Vlogging Camera</h4>
+                     <h3>$1800.80</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.98
+                        </p>
+                     <p>With a little practice and access to a few key tips, even you - yes, you - can start recording great footage, vlogging, or even record an indie film or documentary using just your smartphone</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-8.png" alt="">
+                     <h4>Green Screen</h4>
+                     <h3>$25.48</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.98
+                        </p>
+                     <p>Almost any green material can be used as a green screen provided the fabric is plain, uniformly green, matt, reasonably opaque, and uncreased. Other materials such as walls</p>
+                 </div>
+                 <div class="blog">
+                     <img src="images/blog-9.png" alt="">
+                     <h4>Action Camera</h4>
+                     <h3>$380</h3>
+                     <p>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star"></i></span>
+                         <span><i class="fas fa-star-half-alt"></i></span> 4.98
+                        </p>
+                     <p>If you're looking for a premium alternative to GoPro, the Garmin VIRB Ultra 30 Action Camera is a good option. If you don't want to spend a fortune on an action camera</p>
+                 </div>
+             </div>
+         </section>
+     </main>
 </body>
 </html>
