--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Influencer
                     <div class="analysis">
                         <p><i class="far fas fa-file-export"></i></p>
                         <h3>Export</h3>
-                        <p>Export selected influencers and contact them to all.</p>
+                        <p>Export selected influencers and contact them to</p>
                     </div>
                 </div>
             </div>
